--- a/csgdsr/dsr/templates/dsr/admin/admin_dashboard.html
+++ b/csgdsr/dsr/templates/dsr/admin/admin_dashboard.html
@@ -464,7 +464,8 @@
           <div>
             <h6 class="text-uppercase text-danger mb-2 fw-semibold" style="letter-spacing:1px;">Arrest of SriLankan Fishermen</h6>
             <h6 class=" fw-bold mb-0 text-danger" style="font-weight: 700;">Total Incidents: {{ total_slfisheremen_arrested_incident }}</h6>
-            <h6 class=" fw-bold mb-0 text-danger" style="font-weight: 700;">Fishermen arrested: {{ total_slfisheremen_arrested }}</h6>
+            <h6 class=" fw-bold mb-0 text-danger" style="font-weight: 700;">Fishermen arrested: {{  total_slfisheremen_arrested}}</h6>
+
             <h6 class=" fw-bold mb-0 text-danger" style="font-weight: 700;">Boats Seized: {{ total_slboats_seized }}</h6>
             <h6 class=" fw-bold mb-0 text-danger" style="font-weight: 700;">Fishermen released: {{ total_slfisheremen_released }}</h6>
             <h6 class=" fw-bold mb-0 text-danger" style="font-weight: 700;">Boats released: {{ total_slboats_released }}</h6>
@@ -477,6 +478,21 @@
       </div>
     </div>
 
+
+
+<div class="card">
+    <h5>Sri Lankan Fishermen</h5>
+    Injured: {{ sl_fishermen_stats.injured|default:0 }}<br>
+    Missing: {{ sl_fishermen_stats.missing|default:0 }}<br>
+    Died: {{ sl_fishermen_stats.died|default:0 }}
+</div>
+
+<div class="card">
+    <h5>Sri Lankan Navy</h5>
+    Injured: {{ sl_navy_stats.injured|default:0 }}<br>
+    Missing: {{ sl_navy_stats.missing|default:0 }}<br>
+    Died: {{ sl_navy_stats.died|default:0 }}
+</div>
 
 <div class="col-md-4 mb-4">
   <div class="card dashboard-card shadow-lg border-0 h-100"
